recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:9: error: type mismatch;
 found   : List[Int]
 required: Int
  return min(l.tail::l.tail)
                   ^